# DevOnboarder

./: .aar-markdownlint.json  .actionlint.yml  .automation-config.json  .ci-quality-standards.json  .ci-trigger  .codespell-ignore  .dockerignore  .editorconfig  .env.bot.example  .env.ci  .env.example  .flake8  .folder-color  .force-refresh  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitsigners  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  .markdownlint-ignore  .markdownlint.json  .markdownlintignore  .mise.yml  .pip-audit-ignore  .pre-commit-config.yaml  .pre-commit-config.yaml (modify)  .prettierignore  .redocly.yaml  .shellcheckrc  .spectral.json  .tokens.ci  .tool-versions  .vale.ini  .yamllint  95_PERCENT_CONFIDENCE.md  AAR_BOT_STANDARDIZATION_COMPLETE.md  AAR_IMPLEMENTATION_COMPLETE.md  AGENTS.md  AGENT_MERGE_READINESS_BUG_FIX.md  (+214 more)
.aar/: index.md
.codex/: Agents.md  BASELINE_LOCKED.md  ORCHESTRATOR_AUTOMATION_EXCLUSION.md  automation-tasks.md  bot-permissions.yaml  index.json  known_errors.yaml  terminal_violations.json  validate_prompts.sh  validate_prompts.sh.backup
.devcontainer/: Dockerfile  devcontainer.json
.devonboarder/: cli-shortcuts.json
.github/: .yamllint-config  AGENT_PROTOCOL_CRITICAL.md  CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PR_SUMMARY_TEMPLATE.md  SECURITY.md  copilot-instructions-focused.md  copilot-instructions-truncated-backup.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.tgs/: PROJECT_MANIFEST.json  phase.lock.json
DevOnboarder/: pytest.ini
aar/: README.md  infrastructure_initiative_workflow_success_pattern.md  package-lock.json  package.json  setup-node-env.sh
agents/: agent-maintenance.md  ai-mentor.md  branch-cleanup.md  ci-bot.md  ci-helper-agent.md  ci-monitor.md  ci_enforcement_guard.md  dev-orchestrator.md  diagnostics-bot.md  discord-integration.md  doc_lint_enforcer.md  documentation-quality-enforcer.md  documentation-quality.md  envvar-manager.md  idme-verification.md  index.md  llama2-agile-helper.md  ms-teams-integration.md  onboarding-agent.md  permissions.yml  prod-orchestrator.md  schema-driven-aar-system.md  staging-orchestrator.md
api1/: README.md
api2/: README.md
archive/: Dockerfile  README.md  docker-compose.codex.yml  docker-compose.dev.yaml  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.tags.dev.yaml  docker-compose.tags.prod.yaml  docker-compose.yml  languagetool_check.py
auth/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  __init__.py  requirements.txt  service.py
auth-server/: package.json  tsconfig.json  vitest.config.ts
backend/: README.md  main.py  requirements.txt
backups/: back_settings.json
bot/: .env.example  .eslintrc  .prettierrc  Dockerfile  Dockerfile.dev  README.md  deploy.sh  eslint.config.js  guild-check.js  health-check.js  jest.config.cjs  package-lock.json  package.json  start-dev.sh  start-dev.sh.backup  start-prod.sh  start-prod.sh.backup  tsconfig.json
challenges/: README.md  login-challenge.md
cli/: __init__.py
codex/: README.md  evaluate.py
config/: .coveragerc.auth  .coveragerc.discord  .coveragerc.framework  .coveragerc.xp  aar-config.json  coverage-xp.toml  devonboarder.config.yml  env-sync-config.yaml  navigation_config.yaml
discord-bot/: Dockerfile  index.js  package.json
docker/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  README.md
docs/: AAR_BOT_HEALTH_CHECK_ARCHITECTURE_COMPLETE.md  AAR_DASHBOARD_IMPLEMENTATION_COMMENTARY.md  AAR_HARDENING_COMPLETE.md  AAR_IMPLEMENTATION_COMPLETE.md  AAR_MAKEFILE_INTEGRATION.md  AAR_PHASE2_UI_DASHBOARD_SCAFFOLD.md  AAR_VSCODE_CI_INTEGRATION_2025-08-07.md  AAR_VSCODE_CI_INTEGRATION_SUMMARY.md  AGENTS.md  AGENT_PROTOCOL_ENFORCEMENT_ANALYSIS.md  AI_AGENT_TERMINAL_OVERRIDE.md  Agents.md  Archive-Guide.md  CHANGELOG.md  CI_BREACH_ISSUE_2025-12.md  CI_DASHBOARD_DEPLOYMENT_GUIDE.md  CI_DASHBOARD_IMPLEMENTATION_COMPLETE.md  CI_DASHBOARD_INTEGRATION_ARCHITECTURE.md  CI_DASHBOARD_INTEGRATION_SUMMARY.md  CI_DASHBOARD_WORKFLOW_INTEGRATION.md  CI_PERMISSIONS_SOLUTION.md  CI_PERMISSIONS_STRATEGIC_INTEGRATION.md  CI_VSCODE_CONSISTENCY_FRAMEWORK.md  CLOUDFLARE_TUNNEL_GUIDE.md  CONFIGURATION_MANAGEMENT_POLICY.md  CONFIG_VERSIONS.md  CONTRIBUTING.md  COVERAGE_CHALLENGE_LESSONS_LEARNED.md  COVERAGE_MASKING_SOLUTION.md  Canvas-AAR-Deployment-Summary.md  Codex Coding Guidelines.md  DAI_IMPLEMENTATION_PLAN.md  DAI_IMPLEMENTATION_STATUS.md  DEPLOYMENT_TOKEN_IMPACT.md  DOCKER_ENVIRONMENT_COMPATIBILITY.md  Development-Setup.md  ENHANCED_AAR_GENERATION.md  ENHANCED_AAR_IMPLEMENTATION_SUMMARY.md  ENHANCED_ENVIRONMENT_CONDITIONALS.md  ENVIRONMENT_QUICK_START.md  (+182 more)
emails/: founders_invite.md  invite_alpha_email.md  style-guide.md
envmaps/: auth.allowlist  backend.allowlist  bot.allowlist  frontend.allowlist  integration.allowlist  orchestrator.allowlist
examples/: service_with_token_validation.py
frameworks/: README.md
frontend/: .env.example  .env.frontend.dev  .eslintrc  Dockerfile.dev  README.md  eslint.config.cjs  eslint.config.js  eslint.config.test.js  index.html  lighthouserc.json  marketing-preview.html  package-lock.json  package.json  playwright.config.test.js  playwright.config.ts  pnpm-lock.yaml  postcss.config.js  postcss.config.test.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.config.validation.ts
hooks/: pre-commit
infra/: README.md  blueprint-aurora.md  blueprint-laramie.md
infrastructure/: .env.example  README.md  docker-compose.yaml
metrics/: llama2-usage.md
migrations/: env.py
openapi/: devonboarder.ci.yaml
prompts/: devonboarder_integration_task.md  retro_analysis.prompt  sprint_estimator.prompt  ticket_classifier.prompt
public_docs/: agent_roles.md  orchestration_model.md
reports/: ci_infrastructure_repair_complete.md  cli_failure_response_complete.md  pattern_analysis_966.txt  potato-policy-audit-20250726-195832.md  pr_1056_automation_report.md  pr_1125_automation_report.md  pr_1251_automation_report.md  pr_966_closure_summary.md  pr_968_merge_completion_report.md  (+5 more)
(+1672 files in other folders)
