# =============================================================================
# File: pyproject.toml
# Version: 1.0.0
# Author: DevOnboarder Project
# Created: 2025-07-25
# Updated: 2025-07-25
# Purpose: Python project configuration and dependencies
# Dependencies: setuptools, ruff, pytest
# DevOnboarder Project Standards: Compliant with copilot-instructions.md
# Format: TOML - Python Project Configuration Standard
# =============================================================================

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[project]
name = "devonboarder"
version = "0.1.0"
description = "Sample trunk-based workflow project"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "httpx<0.29",
    "fastapi",
    "uvicorn",
    "SQLAlchemy<3.0",
    "passlib[bcrypt]",
    "python-jose",
    "python-dotenv",
    "alembic",
    "psycopg2-binary",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "requests",
    "pyyaml",
    "jsonschema",
    "black",
    "openapi-spec-validator",
    "ruff",
    "mypy",
    "pip-audit",
    "bandit",
]

[project.scripts]
devonboarder = "devonboarder.cli:main"
devonboarder-server = "devonboarder.server:main"
devonboarder-api = "xp.api:main"
devonboarder-auth = "devonboarder.auth_service:main"
devonboarder-integration = "discord_integration.api:main"
devonboarder-feedback = "feedback_service.api:main"
devonboarder-agile = "llama2_agile_helper.api:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["src"]
data_file = "logs/.coverage"
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "logs/htmlcov"
